style.css
/* Fonts in assets folder */

@font-face {
    font-family: 'SpaceGrotesk-Bold';
    src: url('./fonts/static/SpaceGrotesk-Bold.ttf'),
         
}

@font-face {
    font-family: 'SpaceGrotesk-Medium';
    src: url('./fonts/static/SpaceGrotesk-Medium.ttf'),
         
}

@font-face {
    font-family: 'SpaceGrotesk-Regular';
    src: url('./fonts/SpaceGrotesk-VariableFont_wght.ttf')
         
}

nav{
    font-family: 'SpaceGrotesk-Regular', 'sans-serif;';
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    color: white;
    text-decoration: none;

    display: flex;
    flex-direction: row;
    justify-content: space-between;     

}

#socials{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    max-width: 200px;
    margin-left: auto;
    margin-right: 5rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    text-decoration: none;
    list-style: none;
}

/*variables*/

:root{
--underline-color: #00B4FF;
--footer: #242424;
--grey: #d9d9d9;
--success-green: #4EE1A0;
}

/* Typography */

h2, h3, h4, h5, h6 {
    font-family: 'SpaceGrotesk-Medium', sans-serif;
    font-style: normal;
    line-height: 1.2;
    color: white;
}


h1{
    font-family: 'SpaceGrotesk-Bold', sans-serif;
    font-style: normal;
    line-height: 1.2;
    color: white;
}


p, li, a, a:hover {
    color: grey;
    font-family: 'SpaceGrotesk-Regular', sans-serif;
}



body{
    background-color: #151515;
    width: 90%;
}


.project-image{
    max-width: 500px;
}

#headshot-box{
    position: relative;
    right: 0;
    z-index: 1;
}

#bio button{
    width: 80%;
    text-decoration: underline var(--underline-color);
    text-decoration-color: var(--underline-color);

    -webkit-text-decoration: underline var(--underline-color);
    -webkit-text-decoration-color: var(--underline-color);
    text-underline-offset: 10px;

}

#bio button:hover{
    text-decoration: underline var(--underline-color);
    text-decoration-color: var(--underline-color);

    text-underline-offset: 10px;
    color: var(--underline-color);
}

#bio button:active{
    background-color: transparent;
    border: none;
    outline: none;
}

#headshot{
    width: auto;
    height: 450px;
    position: relative;
    right: 0;

}



#skills div:last-child{
    margin-bottom: 4rem;
}



.blue-underline{
    text-decoration: underline var(--underline-color);
    text-decoration-color: var(--underline-color);

    text-decoration-skip-ink: none;
    text-underline-offset: 8px;
    /* text underline needs to be behind the text */

}



#description{
    font-size: 3.4rem;
    z-index: 10;
    font-weight: 600;
    position: relative;
    text-shadow: 2px 2px 2px #000000;
    color: white;
max-width: 50ch;
font-family: 'SpaceGrotesk-Regular';
letter-spacing: -2px;


}

.small-grey{
    color: grey;
    font-size: 1.4rem;
    position: relative;
    z-index: 10;
    max-width: 30ch;
    min-height: 250px;
    font-family: 'SpaceGrotesk-Regular';
    font-weight: 100;
}

#bio{
    margin: 0 auto;
    min-height: 650px;
}

.contact{
    background-color: transparent;
    border: none;
    text-align: left;
    font-size: 1.5rem;
    width: 86%;
    color: white;
    text-decoration: underline solid var(--underline-color);
    text-decoration-color: var(--underline-color);

    -webkit-text-decoration: underline solid var(--underline-color);
    -webkit-text-decoration-color: var(--underline-color);

    text-underline-offset: 10px;
}

.contact:hover{
    width: 86%;
    text-decoration: underline var(--underline-color);
    text-decoration-color: var(--underline-color);

    text-underline-offset: 10px;
    background-color: transparent;
    box-shadow: none;
    color: var(--underline-color);
}

.contact:active, .contact:focus{
    box-shadow: none;
    background-color: none;
    outline: none;
    border: none;
}



#projects{
    gap: 3.5rem;
    margin-bottom: 4rem;
}

.project-image{
    max-width: 550px;
}

.project-card h3{
    padding: 3px;
    margin-top: .7rem;
    margin-bottom: .7rem;
}

.project-card ul{
    list-style: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline-start: 5px;
    max-width: 200px;
}
 
#Projects-tag{
    width: 80%;
}

.project-card{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: start;
}

  
  .project-links {
    display: none;
    background-color: rgba(100, 100, 100, .25);

  }
  
  .project-card:hover {
    position: relative; /* Make sure .project-card is a positioned element */
    overflow: hidden; /* Hide any overflowing content */
  }
  .project-card:hover .project-links {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly; /* Show the .project-links element */
    position: absolute; /* Position the .project-links element */
    top: 0;
    left: 0;
    width: 100%;
    height: 100%; /* Cover the entire .project-card element */
    background-color: rgba(0, 0, 0, 0.214); /* Add a semi-transparent overlay */
    color: white; /* Make text white */
    text-align: center; /* Center text */
    padding: 10px; /* Add some padding */
  }
  /*TODO - add hover animation effect to project links*/
  .project-links {
    display: none; /* Hide by default */
  }
  
  /* blur effect on the project card, but not the project-links */
    .project-card:hover .project-image {
        filter: blur(5px);
    }

.project-links {
    background-color: #f4f4f4;
    padding: 10px;
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    display: none;
  }


  
  .project-links a{
    color: var(--grey);
    border-radius: 6px;
    background-color: rgba(9, 9, 9, 0.614);
    padding: 10px;
    width: 150px;
    font-size: 14px;
    margin-bottom: 5px;
    font-family: 'SpaceGrotesk-Regular';
    text-decoration: underline var(--underline-color);
    text-decoration-color: var(--underline-color);

    -webkit-text-decoration: underline var(--underline-color);
    -webkit-text-decoration-color: var(--underline-color);
    text-underline-offset: 10px;
  }
  
    .project-links a:hover{
        background-color: var(--footer);
    }
  

footer{
    background: var(--footer);
}

footer section{
    min-height: 500px;

}

@media only screen and (max-width: 1024px) {
    .project-image{
        max-width: 400px;
    }
    .small-grey{
        font-size: 1rem;
        min-height: 190px;
    }

    #headshot{
        height: 350px;
    }

    #description{
        font-size: 2rem;
    }
    
}

@media only screen and (max-width: 768px) {
    .project-image{
        max-width: 300px;
    }
    .small-grey{
        font-size: 1rem;
        min-height: 190px;
    }

    #headshot{
        height: 350px;
    }

    #description{
        font-size: 2rem;
    }

    .project-links{
        display: flex;
        height: auto;
        position: relative;
        background-color: transparent;
    }

    .project-links a{
        width: 100%;
        margin-bottom: 0;
        border-top: none;
        border-right: none;
        border-left: none;
        border-radius: 0;
        background-color: transparent;
    }

    .project-links a:hover{
        background-color: transparent;

    }

    .project-links a:active{
        background-color: transparent;
        position: relative;

    }

    .project-links a:focus{
        background-color: transparent;
        position: relative;
    }
    .project-links a:hover{
        background-color: transparent;
    }

    .project-card:hover .project-links{
        background-color: transparent;
        position: relative;
        height: auto;

    }
    
}

@media  only screen and (max-width: 425px) {
   
    #headshot{
        width: auto;
        max-height: 200px;
        position: relative;
        right: 0;
    }

    .project-image{
        max-width: 250px;
    }
    #description{
        font-size: 2rem;
    }

    #bio{
        width: 85%;
    }
    .project-image{
        margin: 1rem;
        
    }

    #headshot-box{
       justify-content: center;
       margin-bottom: 3rem;
       margin-top: 3rem;
    }
    #skills{
        border-bottom: 1px solid white;
    
    }
    

    #skills button{
        text-align: center;
    }

    .contact{
        font-size: 1rem;
    }
    .skill-box{
        text-align: center;

    }

    .navbar-brand{
        margin: 0;
    }    

    #socials{
        padding: 0;
        margin: 1px;
    }

    nav{
        justify-content: center !important;
    }

    #contact-box{
        flex-direction: column;
    }

    #contact-column{
        align-items: center !important;
    }

    #submit-button{
        margin-left: 0 !important;
        margin-bottom: 3rem;
    }
}


.skill-box{
    display: flex;
    justify-content: center;

}
input[type="text"], input[type="email"]{
    border: none;
    border-bottom: 1px solid var(--grey);
    color: var(--grey);
    background-color: transparent;
}

.form-control{
    border: none;
    border-bottom: 1px solid var(--grey);
    color: var(--grey);
    background-color: transparent;
    resize: none;
}

.form-control:focus{
    border: none;
    border-bottom: 1px solid var(--grey);
    color: var(--grey);
    background-color: transparent;
    resize: none;
    outline: none;
    box-shadow: none;
}


#contact-tag{
    font-size: 2.75rem;
}

    
.container-fluid{
    padding: 0;
}

#submit-button{
    border: none;
    background-color: transparent;
    border-bottom: 1px solid var(--underline-color);
    width: auto;
    margin-left: auto;
    font-family: 'SpaceGrotesk-Regular';
}


#submit-button:hover{
    background-color: transparent;
    color: var(--underline-color);
}

#submit-button:focus{
    background-color: transparent;
    color: var(--underline-color);
    outline: none;
    box-shadow: none;
}

@media only screen and (max-width: 320px) {
    #description{
        font-size: 1.7rem;
    }
    .project-card h3, .project-card p{
        width: 15ch;
    }



    
}

